2018-11-12  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ia64/fpu/sfp-machine.h (__LITTLE_ENDIAN): Remove.
	(__BIG_ENDIAN): Likewise.
	(__BYTE_ORDER): Likewise.
	(strong_alias): Likewise.
	(_strong_alias): Likewise.

2018-11-12  Florian Weimer  <fweimer@redhat.com>

	* malloc/malloc.c (unlink_chunk): Turn the unlink macro into this
	function.  Move after the definition of in_smallbin_range.  Do not
	use __builtin_expect for paths that lead to a noreturn function.
	Drop remaining __builtin_expect (p->fd_nextsize != NULL, 0)
	because it is unclear whether this is in fact an unlikely
	condition.
	(_int_malloc, _int_free): Adjust.
	(malloc_consolidate, _int_realloc): Adjust.  Remove bck, fwd
	variables.
	* malloc/arena.c (heap_trim): Likewise.

2018-11-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/spawni.c (__spawni): Add ccwdir port. Test and use
	it, free it if needed.
	(reauthenticate): Test and use ccwdir.
	(child_init_port): In non-resetids case, test and use ccwdir.
	(child_chdir): New nested function to set ccwdir.
	* hurd/hurd/userlink.h (_hurd_userlink_move): New function.
	* hurd/hurd/port.h (_hurd_port_move): New function.
	* sysdeps/mach/hurd/spawni.c (NEW_ULINK_TABLE): New macro.
	(EXPAND_DTABLE): Use NEW_ULINK_TABLE macro for ulink_dtable.
	* hurd/Versions (_hurd_port_move): Export function.
	* sysdeps/mach/hurd/i386/libc.abilist (_hurd_port_move): Expect
	symbol.
	* sysdeps/mach/hurd/spawni.c (__spawni): Use orig_dtablesize instead
	of dtablesize for allocating dtable_cloexec.

2018-11-09  Martin Sebor  <msebor@redhat.com>

	* include/libc-symbols.h (__attribute_copy__): Define macro unless
	it's already defined.
	(_strong_alias): Use __attribute_copy__.
	(_weak_alias,  __hidden_ver1,  __hidden_nolink2): Same.
	* misc/sys/cdefs.h (__attribute_copy__): New macro.
	* sysdeps/x86_64/multiarch/memchr.c (memchr): Use __attribute_copy__.
	* sysdeps/x86_64/multiarch/memcmp.c (memcmp): Same.