@@ -18,10 +18,10 @@
 
 #include <init-arch.h>
 #include <libm-alias-float.h>
+#include <math.h>
 
 extern float __cosf_sse2 (float);
 extern float __cosf_ia32 (float);
-float __cosf (float);
 
 libm_ifunc (__cosf, HAS_CPU_FEATURE (SSE2) ? __cosf_sse2 : __cosf_ia32);
 libm_alias_float (__cos, cos);
